--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^26.1.3",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vuex-module-decorators": "^0.17.0"
   }
 }
