--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxt/typescript-runtime": "^1.0.0",
     "@nuxtjs/axios": "^5.12.0",
     "nuxt": "^2.14.0",
+    "nuxt-fontawesome": "^0.4.0",
     "nuxt-property-decorator": "^2.7.2"
   },
   "devDependencies": {
