--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nuxt-property-decorator": "^2.7.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@nuxt/types": "^2.14.0",
     "@nuxt/typescript-build": "^2.0.2",
     "@nuxtjs/eslint-config": "^3.1.0",
@@ -53,6 +54,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^26.1.3",
+    "ts-loader": "^8.0.3",
     "vue-jest": "^3.0.4",
     "vuex-module-decorators": "^0.17.0"
   }
