--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest"
   },
   "lint-staged": {
-    "*.{js,vue}": "eslint",
+    "*.{js,ts,vue}": "eslint",
     "*.{css,vue}": "stylelint"
   },
   "husky": {
@@ -22,11 +22,9 @@
     }
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@nuxt/typescript-runtime": "^1.0.0",
     "@nuxtjs/axios": "^5.12.0",
     "nuxt": "^2.14.0",
-    "nuxt-fontawesome": "^0.4.0",
     "nuxt-property-decorator": "^2.7.2"
   },
   "devDependencies": {
