--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@nuxtjs/axios": "^5.12.0",
     "nuxt": "^2.14.0",
     "nuxt-property-decorator": "^2.7.2",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "vee-validate": "^3.3.11"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
