--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^1.0.0",
     "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "nuxt": "^2.14.0",
     "nuxt-property-decorator": "^2.7.2",
     "uuid": "^8.3.0",
